# nonebot-plugin-ascension

./: .editorconfig  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  LICENSE  README.md  bot.py  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: pyright.yml  ruff.yml
docs/: index.md  package.json  pnpm-lock.yaml
docs/.vitepress/config/: footer.ts  index.mts  nav.ts  sidebar.ts
docs/.vitepress/theme/: custom_sidebar.css  index.ts
docs/about/: contact.md  upgrade.md
docs/guide/: glossary.md  index.md
docs/tutorial/: install.md  intro.md
marisa/: __init__.py  config.py  exception.py  extension.py
marisa/configs/: __init__.py  console.py  manager.py  path.py
marisa/configs/configs/: __init__.py  base.py  beg.py  bet.py  closing.py  level_up.py  rebirth.py  sect.py  session.py  sign_in.py  stamina.py  steal.py
marisa/libs/renderer/: __init__.py  context.py  render.py
marisa/libs/renderer/templates/: info.html  main.html.jinja  message.css  tailwind.css
marisa/libs/renderer/templates/components/: header.html.jinja  section.html.jinja
marisa/libs/renderer/templates/icons/: coin.html.jinja  level.html.jinja
marisa/libs/renderer/templates/views/: profile.html.jinja
marisa/migrations/: 6bf5eefd0cbd_first_revision.py  989ba29d3182_first_revision.py  aab5a786b5de_first_revision.py
marisa/models/: __init__.py  backpack.py  buff.py  sect.py  user.py
marisa/plugins/: base.py
marisa/plugins/info/: __init__.py  render.py
marisa/schemas/: __init__.py  buff.py  item.py  level.py  limit.py  quest.py  rift.py  root.py  sect.py
marisa/schemas/enums/: __init__.py
marisa/utils/: annotated.py  depends.py  jsondata.py  resource.py
marisa/utils/manager/: __init__.py  backpack.py  buff.py  item.py
migrations/versions/: 81342e7908a1_first_revision.py  d8324e95c531_first_revision.py
nonebot_plugin_ascension/: __init__.py  config.py  extension.py
nonebot_plugin_ascension/handlers/: __init__.py  base.py
nonebot_plugin_ascension/handlers/buff/: __init__.py
nonebot_plugin_ascension/handlers/info/: __init__.py  render.py
nonebot_plugin_ascension/migrations/: 03e79c58c810_first_revision.py
nonebot_plugin_ascension/models/: __init__.py  backpack.py  buff.py  sect.py  user.py
nonebot_plugin_ascension/schema/: __init__.py  buff.py  level.py  root.py  sect.py
nonebot_plugin_ascension/utils/: calculate.py  jsondata.py  resource.py
