[project]
name = "nonebot-plugin-ascension"
version = "0.1.0"
description = "Welcome to the world of cultivation."
authors = [
    { name = "KomoriDev", email = "mute231010@gmail.com" },
]
dependencies = [
    "nonebot2[fastapi]>=2.3.2",
    "nonebot-plugin-alconna>=0.50.2",
    "aiofiles>=24.1.0",
    "nonebot-plugin-orm[aiosqlite]>=0.7.5",
    "nonebot-plugin-userinfo>=0.2.4",
    "nonebot-plugin-waiter>=0.6.2",
    "nonebot-plugin-htmlrender>=0.3.3",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
adapters = [
    "nonebot-adapter-onebot>=2.4.4",
    "nonebot-adapter-telegram>=0.1.0b17",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pre-commit>=3.7.1",
    "ruff>=0.5.1",
    "black>=24.4.2",
    "isort>=5.13.2",
]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 88
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "PT", "Q"]
ignore = ["E402", "C901"]
